Sugati/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Adult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>PERSONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOFK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Age__c</fullName>
        <formula>(TODAY()-Birthdate)/365.2425</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Arrivals__c</fullName>
        <label>Arrivals</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Booking_Confirmation__c</fullName>
        <label>Booking Confirmation</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Country_Of_Residence__c</fullName>
        <label>Country Of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Dietary_Requirement__c</fullName>
        <label>Dietary Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Asian Vegetarian Meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetic Meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gluten Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jain Meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Fat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarian/Lacto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Emergency_Contact_Email__c</fullName>
        <label>Emergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>C_Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Emergency_No__c</fullName>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>C_Expires_Date__c</fullName>
        <label>Expires Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_Full_Name_on_Passport__c</fullName>
        <label>Full Name on Passport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Household_Member_No__c</fullName>
        <externalId>true</externalId>
        <label>Household Member No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Household_Number__c</fullName>
        <externalId>true</externalId>
        <label>Household Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Infant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Issue_Place__c</fullName>
        <label>Issue Place</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_Known_As__c</fullName>
        <label>Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Lead_Passenger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Passenger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Medical_Conditions__c</fullName>
        <label>Medical Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Nationality__c</fullName>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angolan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiguans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentinean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahraini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbudans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belizean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beninese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruneian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkinabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Notes__c</fullName>
        <description>Emergency Notes from the old system.</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>C_OtherAddress_Line_1__c</fullName>
        <label>OtherAddress Line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_OtherAddress_Line_2__c</fullName>
        <label>OtherAddress Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_OtherAddress_Line_3__c</fullName>
        <label>OtherAddress Line 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Payments__c</fullName>
        <label>Payments</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Place_of_Birth__c</fullName>
        <label>Place of Birth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Prefered_Name__c</fullName>
        <label>Prefered Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Preferences__c</fullName>
        <label>Preferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Relationship__c</fullName>
        <label>Relationship</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Requests__c</fullName>
        <label>Requests</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Same_address_as_Account__c</fullName>
        <formula>IF (AND(MailingStreet = Account.BillingStreet, MailingPostalCode =  Account.BillingPostalCode )  , True, False)</formula>
        <label>Same address as Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>C_Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Special_Requests__c</fullName>
        <label>Special Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_TravelStatus__c</fullName>
        <label>TravelStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Travel_to_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel to US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocCode__c</fullName>
        <label>DocCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocNo__c</fullName>
        <label>DocNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NameAsOnDoc__c</fullName>
        <label>NameAsOnDoc</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy_Type__c</fullName>
        <label>Occupancy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferContact__c</fullName>
        <label>PreferContact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>